--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,5 +17,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <audio id="ona-speaker" class="hidden-audio" />
+    <audio id="ona-player" class="hidden-audio" />
   </body>
 </html>
